# CodingTrain.cpp

./: .clang-tidy  .gitignore  CMakeLists.txt
3rd/SDL2_gfx/: CMakeLists.txt  SDL2_gfxPrimitives.c
inc/helpers/: Renderer.hpp  math.hpp  random.hpp
src/challenges/: CMakeLists.txt
src/challenges/001_starfield/: CMakeLists.txt  Star.cpp  Star.hpp  main.cpp
src/helpers/: CMakeLists.txt  Renderer.cpp  math.cpp  random.cpp
